test/mutation_analysis/s0006_zigzag_conversion/hafis/ablation_o3_r50/mutants/36/result.txt
./test/mutation_analysis/s0006_zigzag_conversion/hafis/ablation_o3_r50/mutants/36/Solution.java:38: error: unreachable statement
                while (false) {
                              ^
1 error
